force-app/main/default/objects/CompetitorProduct__c/CompetitorProduct__c.object-meta.xml
<CustomObject>
    <label>Competitor Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>