force-app/main/default/objects/CompetitorProduct__c/fields/AIDetectionKeywords__c.field-meta.xml
<CustomField>
    <fullName>AIDetectionKeywords__c</fullName>
    <label>AI Detection Keywords</label>
    <type>TextArea</type>
</CustomField>