force-app/main/default/objects/CompetitorProduct__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salty Snacks</fullName>
            </value>
            <value>
                <fullName>Sweet Snacks</fullName>
            </value>
            <value>
                <fullName>Confectionery</fullName>
            </value>
            <value>
                <fullName>Biscuits</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
                <isActive>false</isActive>
                <label>Beverages</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>