force-app/main/default/objects/CompetitorProduct__c/fields/CompetitorBrand__c.field-meta.xml
<CustomField>
    <fullName>CompetitorBrand__c</fullName>
    <label>Competitor Brand</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>