force-app/main/default/objects/CompetitorProduct__c/fields/ProductSKU__c.field-meta.xml
<CustomField>
    <fullName>ProductSKU__c</fullName>
    <externalId>true</externalId>
    <label>Product SKU</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>